# c

projects/simple_fs_notifier/: .gitignore  Makefile  README.md
projects/simple_fs_notifier/include/: arg_parse.h  inotifier.h
projects/simple_fs_notifier/libs/: libfswatch.dylib
projects/simple_fs_notifier/src/: arg_parse.c  inotifier.c  main.c
tcpl_book/: README.md
tcpl_book/exercises/chapter_1/: README.md  meson.build
tcpl_book/exercises/chapter_1/src/: ex_1_11.c  ex_1_13.c  ex_1_15.c  ex_1_16.c  ex_1_17.c  ex_1_18.c  ex_1_6.c
tcpl_book/exercises/chapter_2/: meson.build
