project('exercises', 'c')


apps = {
    'ex_1_3': ['ex_1_3.c'],
    'ex_1_4': ['ex_1_4.c'],
    'ex_1_6': ['ex_1_6.c'],
    'ex_1_7': ['ex_1_7.c'],
    'ex_1_8': ['ex_1_8.c'],
    'ex_1_9': ['ex_1_9.c'],
    'ex_1_10': ['ex_1_10.c'],
    'ex_1_11': ['ex_1_11.c'],
    'ex_1_12': ['ex_1_12.c'],
    'ex_1_13': ['ex_1_13.c'],
    'ex_1_14': ['ex_1_14.c'],
    'ex_1_15': ['ex_1_15.c'],
    'ex_1_16': ['ex_1_16.c'],
    'ex_1_17': ['ex_1_17.c'],
    'ex_1_18': ['ex_1_18.c'],
}

foreach exname, sources : apps
    executable(exname, files(join_paths('src', sources)))
endforeach